--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<!doctype html>
-<hmtl>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles/style.css">
-    </head>
-    <body>
-        <script type="text/javascript" src="js/app.js"></script>
-    </body>
+<!DOCTYPE html>
+<hmtl lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Todo App</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style/styles.css" />
+  </head>
+  <body>
+    <div class="login-form">
+      <div class="login-text">Sign in:</div>
+      <form>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="login*"
+            value=""
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            class="form-control"
+            placeholder="password*"
+            value=""
+            required
+          />
+        </div>
+        <div class="text-center">
+          <button
+            type="button"
+            class="btn btn-success"
+            onclick="loginButtonClicked()"
+          >
+            Login
+          </button>
+        </div>
+        <div class="text-center">
+          New user?<button type="button" class="btn btn-link">
+            Create an account
+          </button>
+        </div>
+      </form>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-firestore.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: 'AIzaSyBU5fSw1AEk42Sjg185dC_Fee1vR7NGXaQ',
+        authDomain: 'todo-app-bc318.firebaseapp.com',
+        databaseURL: 'https://todo-app-bc318.firebaseio.com',
+        projectId: 'todo-app-bc318'
+      };
+      firebase.initializeApp(config);
+      // make auth and firestore references
+      const auth = firebase.auth();
+      const db = firebase.firestore();
+    </script>
+    <script type="text/javascript" src="js/index.js"></script>
+  </body>
 </hmtl>
