--- a/index.html
+++ b/index.html
@@ -13,44 +13,49 @@
     <link rel="stylesheet" href="style/styles.css" />
   </head>
   <body>
-    <div class="login-form">
-      <div class="login-text">Sign in:</div>
-      <form>
-        <div class="form-group">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="login*"
-            value=""
-            required
-          />
-        </div>
-        <div class="form-group">
-          <input
-            type="password"
-            class="form-control"
-            placeholder="password*"
-            value=""
-            required
-          />
-        </div>
-        <div class="text-center">
-          <button
-            type="button"
-            class="btn btn-success"
-            onclick=loginButtonClicked()
-          >
-            Login
-          </button>
-        </div>
-        <div class="text-center">
-          New user?<button type="button" class="btn btn-link" onclick="window.location.href='register.html'" >
-            Create an account
-          </button>
-        </div>
-      </form>
+    <div id="sign-form">
+      <div class="login-form">
+        <div class="login-text">Sign in:</div>
+        <form>
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="login*"
+              value=""
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="password*"
+              value=""
+              required
+            />
+          </div>
+          <div class="text-center">
+            <button
+              type="button"
+              class="btn btn-success"
+              onclick="loginButtonClicked()"
+            >
+              Login
+            </button>
+          </div>
+          <div class="text-center">
+            New user?<button
+              type="button"
+              class="btn btn-link"
+              onclick="window.location.href='register.html'"
+            >
+              Create an account
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
-
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-firestore.js"></script>
@@ -68,5 +73,6 @@
       const db = firebase.firestore();
     </script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/auth.js"></script>
   </body>
 </hmtl>
