--- a/register.html
+++ b/register.html
@@ -13,28 +13,29 @@
     <link rel="stylesheet" href="style/styles.css" />
   </head>
   <body>
-    <div class="login-form">
-      <div class="login-text">Sign up:</div>
-      <form>
-        <div class="form-group">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="login*"
-            value=""
-            required
-          />
-        </div>
-        <div class="form-group">
-          <input
-            type="password"
-            class="form-control"
-            placeholder="password*"
-            value=""
-            required
-          />
-        </div>
-        <div class="form-group">
+    <div id="sign-form">
+      <div class="login-form">
+        <div class="login-text">Sign up:</div>
+        <form>
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="login*"
+              value=""
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="password*"
+              value=""
+              required
+            />
+          </div>
+          <div class="form-group">
             <input
               type="password"
               class="form-control"
@@ -43,23 +44,27 @@
               required
             />
           </div>
-        <div class="text-center">
-          <button
-            type="button"
-            class="btn btn-success"
-            onclick=signUpButtonClicked()
-          >
-            Sign up
-          </button>
-        </div>
-        <div class="text-center">
-          Existing user?<button type="button" class="btn btn-link" onclick="window.location.href='index.html'" >
-            Login here
-          </button>
-        </div>
-      </form>
+          <div class="text-center">
+            <button
+              type="button"
+              class="btn btn-success"
+              onclick="signUpButtonClicked()"
+            >
+              Sign up
+            </button>
+          </div>
+          <div class="text-center">
+            Existing user?<button
+              type="button"
+              class="btn btn-link"
+              onclick="window.location.href='index.html'"
+            >
+              Login here
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
-
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-firestore.js"></script>
