Register error handling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="login*"
+              placeholder="e-mail*"
               value=""
               required
             />
