--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="login*"
+              placeholder="e-mail*"
               value=""
               required
             />
@@ -43,6 +43,9 @@
               value=""
               required
             />
+          </div>
+          <div class="text-center">
+            <span id="error-message"> </span>
           </div>
           <div class="text-center">
             <button
@@ -82,5 +85,6 @@
       const db = firebase.firestore();
     </script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/auth.js"></script>
   </body>
 </hmtl>
