--- a/register.html
+++ b/register.html
@@ -36,17 +36,17 @@
             />
           </div>
           <div class="form-group">
-            <input
-              type="password"
-              class="form-control"
-              placeholder="repeat password*"
-              value=""
-              required
-            />
+            <div id="repeat-password">
+              <input
+                type="password"
+                class="form-control"
+                placeholder="repeat password*"
+                value=""
+                required
+              />
+            </div>
           </div>
-          <div class="text-center">
-            <span id="error-message"> </span>
-          </div>
+
           <div class="text-center">
             <button
               type="button"
@@ -55,6 +55,9 @@
             >
               Sign up
             </button>
+            <div class="text-center">
+              <span id="error-message"></span>
+            </div>
           </div>
           <div class="text-center">
             Existing user?<button
