--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             >
               Login
             </button>
-          </div>
-          <div class="text-center">
-            <span id="submit-button">
-              New user?
-            </span>
-
-            <div class="create-an-account-link">
-              <button
-                type="button"
-                class="btn btn-link"
-                onclick="window.location.href='register.html'"
-              >
-                Create an account
-              </button>
+            <div class="text-center">
+              <span id="error-message"></span>
             </div>
+          </div>
+
+          <div class="text-center">
+            <span id="submit-button">New user?</span>
+
+            <button
+              type="button"
+              class="btn btn-link"
+              onclick="window.location.href='register.html'"
+            >
+              Create an account
+            </button>
           </div>
         </form>
       </div>
