Code cleanup, styling

--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
   <body>
     <div id="sign-form">
       <div class="login-form">
-        <div class="login-text">Sign up:</div>
+        <div class="sign-text">Sign up:</div>
         <form>
           <div class="form-group">
             <label for="inputEmail">Email address</label>
@@ -45,7 +45,6 @@
               placeholder="Password"
             />
           </div>
-
           <div class="text-center">
             <button
               type="button"
@@ -58,16 +57,18 @@
               <span id="error-message"></span>
             </div>
           </div>
-          <div class="text-center">
-            Existing user?<button
-              type="button"
-              class="btn btn-link"
-              onclick="window.location.href='index.html'"
-            >
-              Login here
-            </button>
-          </div>
         </form>
+        <div class="text-center">
+          Existing user?
+          <br \ />
+          <button
+            type="button"
+            class="btn btn-link"
+            onclick="window.location.href='index.html'"
+          >
+            Login here
+          </button>
+        </div>
       </div>
     </div>
 
