--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="sign-form">
       <div class="login-form">
-        <div class="login-text">Sign in:</div>
+        <div class="sign-text">Sign in:</div>
         <form>
           <div class="form-group">
             <label for="inputEmail">Email address</label>
@@ -48,19 +48,18 @@
               <span id="error-message"></span>
             </div>
           </div>
-
-          <div class="text-center">
-            <span id="submit-button">New user?</span>
-
-            <button
-              type="button"
-              class="btn btn-link"
-              onclick="window.location.href='register.html'"
-            >
-              Create an account
-            </button>
-          </div>
         </form>
+        <div class="text-center">
+          <span id="submit-button">New user?</span>
+          <br \ />
+          <button
+            type="button"
+            class="btn btn-link"
+            onclick="window.location.href='register.html'"
+          >
+            Create an account
+          </button>
+        </div>
       </div>
     </div>
 
