--- a/register.html
+++ b/register.html
@@ -41,9 +41,12 @@
             <input
               type="password"
               class="form-control"
-              id="inputPassword"
+              id="inputRepeatPassword"
               placeholder="Password"
             />
+          </div>
+          <div class="text-center">
+            <span id="error-message"></span>
           </div>
           <div class="text-center">
             <button
@@ -53,9 +56,6 @@
             >
               Sign up
             </button>
-            <div class="text-center">
-              <span id="error-message"></span>
-            </div>
           </div>
         </form>
         <div class="text-center">
