--- a/register.html
+++ b/register.html
@@ -45,9 +45,7 @@
               placeholder="Password"
             />
           </div>
-          <div class="text-center">
-            <span id="error-message"></span>
-          </div>
+
           <div class="text-center">
             <button
               type="button"
@@ -58,6 +56,11 @@
             </button>
           </div>
         </form>
+        <div class="error-messages">
+          <div class="text-center">
+            <span id="error-message"></span>
+          </div>
+        </div>
         <div class="text-center">
           Existing user?
           <br \ />
