--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
             >
               Login
             </button>
-            <div class="text-center">
-              <span id="error-message"></span>
+            <div class="submit-error">
+              <div class="text-center">
+                <span id="error-message"></span>
+              </div>
             </div>
           </div>
         </form>
+
         <div class="text-center">
           <span id="submit-button">New user?</span>
           <br \ />
