New page added, code cleanup

--- a/register.html
+++ b/register.html
@@ -62,8 +62,7 @@
           </div>
         </div>
         <div class="text-center">
-          Existing user?
-          <br \ />
+          Existing user?<br \ />
           <button
             type="button"
             class="btn btn-link"
