--- a/todo.html
+++ b/todo.html
@@ -58,6 +58,13 @@
             </div>
           </li>
         </ul>
+        <button
+          class="btn btn-outline-light my-2 my-sm-0"
+          id="logout-button"
+          type="submit"
+        >
+          Logout
+        </button>
       </div>
     </nav>
 
