File cleanup, error handling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
             </div>
           </div>
         </form>
-
+        <div id="error-messages">
+          <div class="text-center">
+            <span id="error-message"></span>
+          </div>
+        </div>
         <div class="text-center">
           <span id="submit-button">New user?</span>
           <br \ />
@@ -83,6 +87,6 @@
       const db = firebase.firestore();
     </script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/auth.js"></script>
+    <script type="text/javascript" src="js/signin.js"></script>
   </body>
 </hmtl>
