--- a/register.html
+++ b/register.html
@@ -50,13 +50,13 @@
             <button
               type="button"
               class="btn btn-success"
-              onclick="signUpButtonClicked()"
+              onclick="signupButtonClicked()"
             >
               Sign up
             </button>
           </div>
         </form>
-        <div class="error-messages">
+        <div id="error-messages">
           <div class="text-center">
             <span id="error-message"></span>
           </div>
@@ -91,6 +91,6 @@
       const db = firebase.firestore();
     </script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/auth.js"></script>
+    <script type="text/javascript" src="js/signup.js"></script>
   </body>
 </hmtl>
