--- a/todo.html
+++ b/todo.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Todo App</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,25 +37,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
         </ul>
         <button
@@ -85,7 +66,6 @@
       const db = firebase.firestore();
     </script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/auth.js"></script>
     <script type="text/javascript" src="js/todo.js"></script>
   </body>
 </hmtl>
