--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
             >
               Login
             </button>
-            <div class="submit-error">
-              <div class="text-center">
-                <span id="error-message"></span>
-              </div>
-            </div>
           </div>
         </form>
-        <div id="error-messages">
+        <div id="error-message">
           <div class="text-center">
-            <span id="error-message"></span>
+            <span id="error-messages"></span>
           </div>
         </div>
         <div class="text-center">
