--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
             </button>
           </div>
         </form>
-        <div id="error-messages">
+        <div id="error-message">
           <div class="text-center">
             <span id="error-message"></span>
           </div>
