--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <div class="sign-text">Sign in:</div>
         <form>
           <div class="form-group">
-            <label for="inputEmail">Email address</label>
+            <label for="input-email">Email address</label>
             <input
               type="email"
               class="form-control"
-              id="inputEmail"
+              id="input-email"
               aria-describedby="emailHelp"
               placeholder="Enter email"
             />
           </div>
           <div class="form-group">
-            <label for="inputPassword">Password</label>
+            <label for="input-password">Password</label>
             <input
               type="password"
               class="form-control"
-              id="inputPassword"
+              id="input-password"
               placeholder="Password"
             />
           </div>
