--- a/register.html
+++ b/register.html
@@ -22,30 +22,30 @@
         <div class="sign-text">Sign up:</div>
         <form>
           <div class="form-group">
-            <label for="inputEmail">Email address</label>
+            <label for="input-email">Email address</label>
             <input
               type="email"
               class="form-control"
-              id="inputEmail"
+              id="input-email"
               aria-describedby="emailHelp"
               placeholder="Enter email"
             />
           </div>
           <div class="form-group">
-            <label for="inputPassword">Password</label>
+            <label for="input-password">Password</label>
             <input
               type="password"
               class="form-control"
-              id="inputPassword"
+              id="input-password"
               placeholder="Password"
             />
           </div>
           <div class="form-group">
-            <label for="inputPassword">Confirm password</label>
+            <label for="input-password">Confirm password</label>
             <input
               type="password"
               class="form-control"
-              id="inputRepeatPassword"
+              id="input-repeat-password"
               placeholder="Password"
             />
           </div>
@@ -62,7 +62,7 @@
         </form>
         <div id="error-message">
           <div class="text-center">
-            <span id="error-message"></span>
+            <span id="error-messages"></span>
           </div>
         </div>
         <div class="text-center">
