--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               placeholder="Password"
             />
           </div>
+
           <div class="text-center">
             <button
               type="button"
@@ -50,10 +51,8 @@
             </button>
           </div>
         </form>
-        <div id="error-message">
-          <div class="text-center">
-            <span id="error-messages"></span>
-          </div>
+        <div class="text-center">
+          <div id="spinner-error-box"></div>
         </div>
         <div class="text-center">
           <span id="submit-button">New user?</span>
