Spinner + error handling fix

--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
           </div>
         </form>
         <div class="text-center">
-          <div id="spinner-error-box"></div>
+          <div id="error-box">
+            <span id="error-message"></span>
+          </div>
         </div>
-        <div class="text-center">
+      </div>
+      <div class="text-center">
+        <div id="change-page-box">
           <span id="submit-button">New user?</span>
           <br \ />
           <button
