--- a/register.html
+++ b/register.html
@@ -60,20 +60,22 @@
             </button>
           </div>
         </form>
-        <div id="error-message">
-          <div class="text-center">
-            <span id="error-messages"></span>
+        <div class="text-center">
+          <div id="error-box">
+            <span id="error-message"></span>
           </div>
         </div>
         <div class="text-center">
-          Existing user?<br \ />
-          <button
-            type="button"
-            class="btn btn-link"
-            onclick="window.location.href='index.html'"
-          >
-            Login here
-          </button>
+          <div id="change-page-box">
+            Existing user?<br \ />
+            <button
+              type="button"
+              class="btn btn-link"
+              onclick="window.location.href='index.html'"
+            >
+              Login here
+            </button>
+          </div>
         </div>
       </div>
     </div>
