--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
             <button
               type="button"
               class="btn btn-link"
-              onclick="window.location.href='index.html'"
+              onclick="window.location.href='/'"
             >
               Login here
             </button>
