Add missing ids for testing purposes

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <button
               type="button"
               class="btn btn-success"
+              id="login-button"
               onclick="loginButtonClicked()"
             >
               Log in
@@ -64,6 +65,7 @@
           <button
             type="button"
             class="btn btn-link"
+            id="create-an-account-button"
             onclick="window.location.href='register.html'"
           >
             Create an account
