--- a/register.html
+++ b/register.html
@@ -54,6 +54,7 @@
             <button
               type="button"
               class="btn btn-success"
+              id="sign-up-button"
               onclick="signupButtonClicked()"
             >
               Sign up
@@ -71,6 +72,7 @@
             <button
               type="button"
               class="btn btn-link"
+              id="register-button"
               onclick="window.location.href='/'"
             >
               Login here
